<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackground">

    <LinearLayout
        android:id="@+id/verify_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:background="#00ffffff"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/enter_verification_title"
            android:textColor="@color/deskDarkGreen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Poppins"
            android:text="@string/verification_subtitle"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/verification_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_bounding_boxes"
            style="@style/Poppins"
            android:hint="@string/enter_verification_code"
            android:inputType="number"
            android:minHeight="53dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvResend"
            style="@style/Text.Small.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/resend_in_d_sec_s"
            android:textSize="12sp" />

        <Button
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_teal"
            style="@style/Poppins"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
