<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:layout_marginTop="3dp"
        android:background="@color/deskGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv30Days"
        app:layout_constraintStart_toEndOf="@id/iv3Days"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv3Days"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:src="@drawable/ic_streak_fire"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv7Days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_50"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@+id/iv3Days"
        app:layout_constraintStart_toStartOf="@+id/iv3Days"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_3rd_day"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@id/iv3Days"
        app:layout_constraintStart_toStartOf="@id/iv3Days"
        app:layout_constraintTop_toBottomOf="@id/iv3Days" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv7Days"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_streak_hidden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv14Days"
        app:layout_constraintStart_toEndOf="@id/iv3Days"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_7_days"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@id/iv7Days"
        app:layout_constraintStart_toStartOf="@id/iv7Days"
        app:layout_constraintTop_toBottomOf="@id/iv7Days" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_80"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@+id/iv7Days"
        app:layout_constraintStart_toStartOf="@+id/iv7Days"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv14Days"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_streak_hidden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv21Days"
        app:layout_constraintStart_toEndOf="@id/iv7Days"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_14_days"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@id/iv14Days"
        app:layout_constraintStart_toStartOf="@id/iv14Days"
        app:layout_constraintTop_toBottomOf="@id/iv14Days" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_100"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@+id/iv14Days"
        app:layout_constraintStart_toStartOf="@+id/iv14Days"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv21Days"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_streak_hidden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iv30Days"
        app:layout_constraintStart_toEndOf="@id/iv14Days"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_21_days"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@id/iv21Days"
        app:layout_constraintStart_toStartOf="@id/iv21Days"
        app:layout_constraintTop_toBottomOf="@id/iv21Days" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_120"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@+id/iv21Days"
        app:layout_constraintStart_toStartOf="@+id/iv21Days"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv30Days"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_streak_hidden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv21Days"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_30_days"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@id/iv30Days"
        app:layout_constraintStart_toStartOf="@id/iv30Days"
        app:layout_constraintTop_toBottomOf="@id/iv30Days" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_150"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@+id/iv30Days"
        app:layout_constraintStart_toStartOf="@+id/iv30Days"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
    <!--        android:id="@+id/tvPoint"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textColor="@color/gray"-->
    <!--        android:textSize="@dimen/streak_text_size"-->
    <!--        android:visibility="gone"-->
    <!--        tools:text="30d" />-->
</androidx.constraintlayout.widget.ConstraintLayout>