<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_layout_bottom_sheet"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="10dp"
        android:src="@drawable/ic_close" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/ic_traffic_light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/redeeming_this_reward_will_deduct"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/ef_teal"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="2000 points" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/from_your_account"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_green_6"
        android:backgroundTint="@color/ef_grey"
        android:gravity="center"
        android:lineHeight="20sp"
        android:padding="20dp"
        android:text="@string/redeem_note"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvUseNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_green_6"
        android:backgroundTint="@color/ef_teal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:text="@string/use_now"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvUseLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_white_corner_6"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:text="@string/use_later"
        android:textSize="16sp" />

</LinearLayout>