<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackground">


    <LinearLayout
        android:id="@+id/ll_box_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView

            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/deskercise"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:background="#00ffffff"
            android:src="@drawable/ic_baseline_arrow_back_24" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_enterDetails"
            style="@style/Poppins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_subheading"
            android:textColor="@color/gray"
            android:textSize="14sp"

            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_et"
            style="@style/Poppins"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_bounding_boxes"
            android:hint="@string/email_address"
            android:minHeight="53dp"
            android:padding="10dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_enternewDetails"
            style="@style/Poppins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/confirmation_code_will_be_sent_to_this_email"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/resetPassword"
            style="@style/Poppins"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
